--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^2.1.1"
 streamlit = "^1.27.2"
 plotly = "^5.17.0"
 jupyter = "^1.0.0"
+black = "^23.10.0"
+ruff = "^0.1.0"
 
 
 [build-system]
