--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "==3.10.10"
+python = "^3.10.10"
 jupyterlab = "^4.0.6"
 pandas = "^2.1.1"
 streamlit = "^1.27.2"
