--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,20 +2,12 @@
 name = "dev-boilerplate-course"
 version = "0.1.0"
 description = ""
-authors = []
+authors = ["ΘΑΝΑΣΗΣ ΑΡΓΥΡΙΟΥ <argythana@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10.10"
-jupyterlab = "^4.0.6"
-pandas = "^2.1.1"
-streamlit = "^1.27.2"
-plotly = "^5.17.0"
-jupyter = "^1.0.0"
-ruff = "^0.1.0"
-black = "^23.10.0"
-urllib3 = "2.0.7"
-pymongo = "^4.6.0"
+python = "^3.10"
+
 
 [build-system]
 requires = ["poetry-core"]
